--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
         <meta http-equiv="Expires" content="Fri, Jun 12 1981 08:20:00 GMT">
         <meta http-equiv="Pragma" content="no-cache">
         <meta http-equiv="Cache-Control" content="no-cache">
+
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
     </head>
     <body>
         <form method=POST enctype=multipart/form-data action="{{ url_for('loadsite') }}">
@@ -33,11 +36,27 @@
                             <option value="{{ symbol }}">{{ symbol }}</option>
                         {% endfor %}
                     </select>
-                    <img src="static/permanent/figure{{ i }}.png">
                     <br/>
                 {% endfor %}
                 <button type="submit" class="btn btn-default">Go</button>
             </form>
         {% endif %}
+        {% if plot1 %}
+            <div class="chart" id="graphone">
+                <script>
+                    var graphs = {{plot1 | safe}};
+                    Plotly.plot('graph1',graphs,{});
+                </script>
+            </div>
+        {% endif %}
+        {% if plot1 %}
+            <div class="chart" id="graphtwo">
+                <script>
+                    var graphs = {{plot2 | safe}};
+                    Plotly.plot('graph2',graphs,{});
+                </script>
+            </div>
+        {% endif %}
+    <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script>
     </body>
 </html>
