--- a/templates/index.html
+++ b/templates/index.html
@@ -1,60 +1,199 @@
 <html>
     <head>
         <title>Options Tracer</title>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
     </head>
-    <body>
+    <body onload="loadChecks()">
         <h1>Options Tracker</h1>
         <form method=POST enctype=multipart/form-data action="{{ url_for('loadsite') }}">
             <input type=file name=csvtype>
             <input type="submit">
         </form>
-        {% if params %}
-            <form method="POST" action="{{ url_for('test') }}">
-                {% for i in range(index) %}
-                    <select name="params{{ i }}" id="params{{ i }}">
-                        {% for param in params %}
-                            <option value="{{ param }}">{{ param }}</option>
-                        {% endfor %}
-                    </select>
-                    <select name="reds{{ i }}" id="reds{{ i }}">
-                        {% for symbol in symbols %}
-                            <option value="{{ symbol }}">{{ symbol }}</option>
-                        {% endfor %}
-                    </select>
-                    <select name="greens{{ i }}" id="greens{{ i }}">
-                        {% for symbol in symbols %}
-                            <option value="{{ symbol }}">{{ symbol }}</option>
-                        {% endfor %}
-                    </select>
-                    <select name="blues{{ i }}" id="blues{{ i }}">
-                        {% for symbol in symbols %}
-                            <option value="{{ symbol }}">{{ symbol }}</option>
-                        {% endfor %}
-                    </select>
-                    <br/>
-                {% endfor %}
-                <button type="submit" class="btn btn-default">Go</button>
-            </form>
-        {% endif %}
-        {% if plot1 %}
-            <div class="chart" id="graphone">
-                <script>
-                    var graphs = {{plot1 | safe}};
-                    Plotly.plot('graphone',graphs,{});
-                </script>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    {% if params %}
+                        <h2>Your Selections Will Appear Here</h2>
+                        <form method="POST" action="{{ url_for('test') }}">
+                            <textarea cols="10" name="showVals" id="showVals" readonly></textarea>
+                            <input type="submit">
+                        </form>
+                        <table id="checkAll">
+                            <tr>
+                                <td>Check All?</td>
+                                <td>
+                                    <input type="checkbox" onchange="checkAll(this)" id="allbox" name="allbox" value="allpick">
+                                </td>
+                            </tr>
+                        </table>
+
+
+                        <input type="text" id="myInput" onkeyup="parseTable()" onfocus="showAll(this)" onblur="hideInfo(this)" placeholder="Enter a symbol..">
+                        <table id="myTable">
+                            <tr class="header">
+                                <th style="width:60%;">Symbol</th>
+                                <th style="width:40%;">Graph?</th>
+                            </tr>
+                            {% for symbol in symbols %}
+                                <tr>
+                                    <td>{{ symbol }}</td>
+                                    <td>
+                                        <input type="checkbox" onchange="showPicked(this)" id="{{ symbol }}" name="symbolcheckbox" value="pick{{ symbol }}">
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </table>
+                    {% endif %}
+                </div>
+                <div class="col-md">
+                    {% if plot1 %}
+                        <select name="params2" id="params1" onchange="plotNew(this)">
+                            {% for param in params %}
+                                <option value="{{ param }}">{{ param }}</option>
+                            {% endfor %}
+                        </select>
+                        <div class="chart" id="graph1">
+                            <script>
+                                var graphs = {{plot1 | safe}};
+                                Plotly.plot('graph1',graphs,{});
+                            </script>
+                        </div>
+                    {% endif %}
+                    {% if plot2 %}
+                        <select name="params2" id="params2" onchange="plotNew(this)">
+                            {% for param in params %}
+                                <option value="{{ param }}">{{ param }}</option>
+                            {% endfor %}
+                        </select>
+                        <div class="chart" id="graph2">
+                            <script>
+                                var graphs = {{plot2 | safe}};
+                                Plotly.plot('graph2',graphs,{});
+                            </script>
+                        </div>
+                    {% endif %}
+                </div>
             </div>
-        {% endif %}
-        {% if plot2 %}
-            <div class="chart" id="graphtwo">
-                <script>
-                    var graphs = {{plot2 | safe}};
-                    Plotly.plot('graphtwo',graphs,{});
-                </script>
-            </div>
-        {% endif %}
-        <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script>
+        </div>
+        <script>
+
+        function parseTable() {
+            // Declare variables
+            var input, table, tr, td, i, txtValue;
+            input = document.getElementById("myInput").value;
+            table = document.getElementById("myTable");
+            tr = table.getElementsByTagName("tr");
+
+            for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[0];
+                if (td) {
+                    txtValue = td.textContent || td.innerText;
+                    if (txtValue.toUpperCase().indexOf(input) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }
+            }
+        }
+
+        function hideInfo(source) {
+            var table, tr;
+            table = document.getElementById("myTable");
+            tr = table.getElementsByTagName("tr");
+            if (source.value === "") {
+                for (i = 0; i < 5; i++) {
+                    tr[i].style.display = "";
+                }
+                for (i = 6; i < tr.length; i++) {
+                    tr[i].style.display = "none";
+                }
+            }
+        }
+
+        function showAll(source) {
+            var table, tr;
+            table = document.getElementById("myTable");
+            tr = table.getElementsByTagName("tr");
+            for (i = 0; i < tr.length; i++) {
+                tr[i].style.display = "";
+            }
+        }
+
+        function showPicked(source) {
+            var items = document.getElementById("showVals").innerHTML.split("\n ");
+            localStorage.setItem(source.id, source.checked);
+            if (source.checked) {
+                var text = document.createTextNode(source.id);
+                items.push(source.id);
+            } else {
+                var text = document.createTextNode(source.id);
+                items.splice(items.indexOf(source.id), 1);
+            }
+            document.getElementById("showVals").innerHTML = items.join("\n ");
+        }
+
+        function checkAll(source) {
+            checkboxes = document.getElementsByName('symbolcheckbox');
+
+            for (i = 0; i < checkboxes.length; i++) {
+                checkboxes[i].checked = source.checked;
+                showPicked(checkboxes[i]);
+            }
+        }
+
+        function loadChecks() {
+            checkboxes = document.getElementsByName('symbolcheckbox');
+            for(i = 0; i < checkboxes.length; i++) {
+                checkboxes[i].checked = localStorage.getItem(checkboxes[i].id) === 'true' ? true:false;
+                if(checkboxes[i].checked) {
+                    showPicked(checkboxes[i]);
+                }
+            }
+        }
+
+        function plotNew(source) {
+            var items = document.getElementById("showVals").innerHTML.split("\n ");
+            console.log(items);
+            var parma = source.value;
+            var appender = source.id.substring(6);
+            req = $.ajax({
+                url: '/swapgraph',
+                type: 'POST',
+                data: {
+                    items: JSON.stringify(items),
+                    parma: parma,
+                    graph: appender
+                }
+            })
+            req.done(function (response) {
+                $("#graph" + appender).fadeOut(100).fadeIn(100);
+                graphs = JSON.parse(response);
+                console.log(graphs.data);
+                console.log(graphs.layout);
+                if (appender === "1") {
+                    console.log("its one");
+                    Plotly.react('graph1', graphs.data, graphs.layout);
+                }
+                if (appender === "2") {
+                    console.log("its two");
+                    Plotly.react('graph2', graphs.data, graphs.layout);
+                }
+            });
+        }
+
+
+        </script>
+
     </body>
 </html>
