--- a/templates/index.html
+++ b/templates/index.html
@@ -12,21 +12,29 @@
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+
+        <style type="text/css">
+            .container {
+                max-width: 90%;
+            }
+        </style>
     </head>
     <body onload="loadChecks()">
-        <h1>Options Tracker</h1>
-        <form method=POST enctype=multipart/form-data action="{{ url_for('loadsite') }}">
-            <input type=file name=csvtype>
-            <input type="submit">
-        </form>
         <div class="container">
+            <h1>Options Tracker</h1>
             <div class="row">
-                <div class="col-sm">
+                <form method=POST enctype=multipart/form-data action="{{ url_for('loadsite') }}">
+                    <input type=file name=csvtype>
+                    <input type="submit" value="Send File">
+                </form>
+            </div>
+            <div class="row">
+                <div class="col-lg-3">
                     {% if params %}
                         <h2>Your Selections Will Appear Here</h2>
                         <form method="POST" action="{{ url_for('test') }}">
-                            <textarea cols="10" name="showVals" id="showVals" readonly></textarea>
-                            <input type="submit">
+                            <textarea cols="12" name="showVals" id="showVals" readonly></textarea>
+                            <input type="submit" value="Graph Selection">
                         </form>
                         <table id="checkAll">
                             <tr>
@@ -55,7 +63,7 @@
                             </table>
                     {% endif %}
                 </div>
-                <div class="col-md">
+                <div class="col-lg-9">
                     {% if plot1 %}
                         <select name="params2" id="params1" onchange="plotNew(this)">
                             {% for param in params %}
@@ -84,7 +92,7 @@
                     {% endif %}
                 </div>
             </div>
-        </div>
+        </br>
         <script>
 
         function parseTable() {
